--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
 
 	<body>
 
+    <div id='slideshow'>
+
+      <div id="container" class="fade-in">
+      <img name=slide alt="Sahara Desert Landscape" title="Sahara Desert Landscape">
+      </div>
+
+      <div class="controls">
+        <button class="button" id="backward"></button>
+        <button class="button" id="forward"></button>
+      <div>
+
+    </div>
+
+    <div id='sidebar'>
+
+
+    </div>
+
+    <script src="main.js"></script>
 
 	</body>
 
