Add country imgs and make dropdown responsive

--- a/countries.html
+++ b/countries.html
@@ -15,6 +15,8 @@
 
 	<body>
 
+
+<section id="right-side">
     <select id="dropdown" name="dropdown">
       <option>Select a Value </option>
       <option value="0">Algeria</option>
@@ -55,9 +57,19 @@
       <p id="area"></p>
     </div>
 
-    <h4> Laguage </h4>
+    <h4> Language </h4>
     <p id="language"></p>
   </div>
+
+</section>
+
+<section id="left-side">
+
+  <figure class="country-img-container">
+    <img id="country-image">
+  </figure>
+  
+</section>
 
 
     <script src="countries.js"></script>
