--- a/countries.html
+++ b/countries.html
@@ -13,51 +13,52 @@
 
 	</head>
 
-	<body>
+	<body id="country-page">
 
 
 <section id="right-side">
-    <select id="dropdown" name="dropdown">
-      <option>Select a Value </option>
-      <option value="0">Algeria</option>
-      <option value="1">Chad</option>
-      <option value="2">Egypt</option>
-      <option value="3">Libya</option>
-      <option value="4">Mali</option>
-      <option value="5">Mauritania</option>
-      <option value="6">Morocco</option>
-      <option value="7">Niger</option>
-      <option value="8">Sudan</option>
-      <option value="9">Tunisia</option>
-    </select>
 
-
-    <div>
-      <h4> Country Name </h4>
-      <p id="name"></p>
+    <div id="dropdown-container">
+      <select id="dropdown" name="dropdown">
+        <option>Select a Value </option>
+        <option value="0">Algeria</option>
+        <option value="1">Chad</option>
+        <option value="2">Egypt</option>
+        <option value="3">Libya</option>
+        <option value="4">Mali</option>
+        <option value="5">Mauritania</option>
+        <option value="6">Morocco</option>
+        <option value="7">Niger</option>
+        <option value="8">Sudan</option>
+        <option value="9">Tunisia</option>
+      </select>
     </div>
 
-    <div>
+    <div class="info">
+      <h3 id="name"></h3>
+    </div>
+
+    <div class="info">
       <h4> Abbreviation </h4>
       <p id="abbr"></p>
     </div>
 
-    <div>
+    <div class="info">
       <h4> Capital </h4>
       <p id="cap"></p>
     </div>
 
-    <div>
+    <div class="info">
       <h4> Population </h4>
       <p id="pop"></p>
     </div>
 
-    <div>
+    <div class="info">
       <h4> Area </h4>
       <p id="area"></p>
     </div>
 
-    <h4> Language </h4>
+    <h4 class="info"> Language </h4>
     <p id="language"></p>
   </div>
 
@@ -66,9 +67,9 @@
 <section id="left-side">
 
   <figure class="country-img-container">
-    <img id="country-image">
+    <img id="country-image" src="imgs/placeholder.jpg">
   </figure>
-  
+
 </section>
 
 
