Fix slideshow fade on homepage

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <img name=slide alt="Sahara Desert Landscape" title="Sahara Desert Landscape">
       </div>
 
+      <div id="slider">
+
+      </div>
+
       <div class="controls">
         <button class="button" id="backward"></button>
         <button class="button" id="forward"></button>
