Begin styling and add title to home

--- a/index.html
+++ b/index.html
@@ -17,18 +17,21 @@
 
     <div id='slideshow'>
 
+      <div class='title'>
+        <h1> Sahara </h1>
+        <h1> Conservation </h1>
+        <h1> Fund </h1>
+      </div>
+
       <div id="container" class="fade-in">
       <img name=slide alt="Sahara Desert Landscape" title="Sahara Desert Landscape">
       </div>
 
-      <div id="slider">
-
-      </div>
 
       <div class="controls">
         <button class="button" id="backward"></button>
         <button class="button" id="forward"></button>
-      <div>
+      </div>
 
     </div>
 
