Style slideshow buttons on home

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div id='slideshow'>
 
       <div class='title'>
-        <h1> Sahara </h1>
-        <h1> Conservation </h1>
-        <h1> Fund </h1>
+        <h1> SAHARA </h1>
+        <h1> CONSERVATION </h1>
+        <h1> FUND </h1>
       </div>
 
       <div id="container" class="fade-in">
@@ -29,8 +29,12 @@
 
 
       <div class="controls">
-        <button class="button" id="backward"></button>
-        <button class="button" id="forward"></button>
+        <button class="button" id="backward">
+          <div class="arrow-left"></div>
+        </button>
+        <button class="button" id="forward">
+          <div class="arrow-right"></div>
+        </button>
       </div>
 
     </div>
