--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 
 		<meta charset="utf-8">
 
-		<title></title>
+		<title>Sahara Conservation Fund</title>
+
+    <link rel="stylesheet" href="https://use.typekit.net/lhn3kpw.css">
+
 
 		<link type="text/css" rel="stylesheet" href="style.css" />
 
@@ -13,7 +16,7 @@
 
 	</head>
 
-	<body>
+	<body id="home">
 
     <div id='slideshow'>
 
@@ -41,8 +44,19 @@
 
     <div id='sidebar'>
 
+      <section class='menu'>
+        <p><a href=''>Home </a></p>
+        <p><a href='about.html'>About </a></p>
+        <p><a href='countries.html'>Countries </a></p>
+      </section>
+
+      <figure id=logo>
+        <img src="imgs/logo-scf.png" alt="Sahara Conservation Fund Logo" title="Sahara Conservation Fund Logo">
+      </figure>
+
 
     </div>
+
 
     <script src="main.js"></script>
 
