--- a/countries.html
+++ b/countries.html
@@ -60,8 +60,10 @@
         <p id="area"></p>
       </div>
 
-      <h4 class="info"> Language </h4>
-      <p id="language"></p>
+      <div class="info">
+        <h4> Language </h4>
+        <p id="language"></p>
+      </div>
     </div>
   </section>
 
