--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="https://use.typekit.net/lhn3kpw.css">
 
-
 		<link type="text/css" rel="stylesheet" href="style.css" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +44,7 @@
     <div id='sidebar'>
 
       <section class='menu'>
-        <p><a href=''>Home </a></p>
+        <p><a href='home.html'>Home </a></p>
         <p><a href='about.html'>About </a></p>
         <p><a href='countries.html'>Countries </a></p>
       </section>
