Style dropdown list and facts on country page

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<body id="about">
 
       <section class='menu'>
-        <p><a href='home.html'>Home </a></p>
+        <p><a href='index.html'>Home </a></p>
         <p><a href='about.html'>About </a></p>
         <p><a href='countries.html'>Countries </a></p>
       </section>
