--- a/countries.html
+++ b/countries.html
@@ -21,7 +21,7 @@
 
     <div id="dropdown-container">
       <select id="dropdown" name="dropdown">
-        <option>Select a Value </option>
+        <option>Select a Country </option>
         <option value="0">Algeria</option>
         <option value="1">Chad</option>
         <option value="2">Egypt</option>
@@ -41,7 +41,7 @@
       </div>
 
       <div class="info">
-        <h4> Abbreviation </h4>
+        <h4> Abbreviation: </h4>
         <p id="abbr"></p>
       </div>
 
