--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id='sidebar'>
 
       <section class='menu'>
-        <p><a href='home.html'>Home </a></p>
+        <p><a href='index.html'>Home </a></p>
         <p><a href='about.html'>About </a></p>
         <p><a href='countries.html'>Countries </a></p>
       </section>
