Add blurb to home page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
 
     <div id='sidebar'>
 
+      <section class="blurb">
+
+        <p> "The Sahara Conservation Fund (SCF) was
+established in 2004 to address the silent
+extinction crisis facing the wildlife of the
+Sahara and the Sahel, an area covering over
+a fifth of the surface of Africa. </p>
+
+        <p> The Sahara has long been home to wildlife
+and to peoples whose livelihoods and survival are intimately linked to the sustainable use of natural resources – pasture, woodland and water. Over-hunting, over-grazing, drought and an absence of resources for conservation have led to the loss or degradation of many habitats and the decline
+or extinction of once familiar species.</p>
+
+        <p> Working with partners worldwilde, SCF develops long-term conservation solutions
+that integrate wildlife, habitat and human
+beings. SCF addresses the conservation
+needs of some of the hottest, the wildest and
+the most overlooked biodiversity hotspots
+on earth, the Sahara and the Sahel."</p>
+
+      </section>
+
       <section class='menu'>
         <p><a href='index.html'>Home </a></p>
         <p><a href='about.html'>About </a></p>
