Add desciprtion to countries

--- a/countries.html
+++ b/countries.html
@@ -35,10 +35,12 @@
       </select>
     </div>
 
-    <section class="country-info">
+  <section class="country-info">
       <div class="info">
         <h3 id="name"></h3>
       </div>
+
+      <p id="blurb"></p>
 
       <div class="info">
         <h4> Abbreviation: </h4>
@@ -64,7 +66,7 @@
         <h4> Language </h4>
         <p id="language"></p>
       </div>
-    </div>
+
   </section>
 
   <section class='menu'>
