Add content to about page and style

--- a/countries.html
+++ b/countries.html
@@ -40,7 +40,7 @@
         <h3 id="name"></h3>
       </div>
 
-      <p id="blurb"></p>
+      <p id="blurb">There are 10 countries that make up the Sahara. Select one from the dropdown list above to learn more.</p>
 
       <div class="info">
         <h4> Abbreviation: </h4>
