--- a/index.html
+++ b/index.html
@@ -64,16 +64,19 @@ on earth, the Sahara and the Sahel."</p>
 
       </section>
 
+
+    <div>
       <section class='menu'>
         <p><a href='index.html'>Home </a></p>
         <p><a href='about.html'>About </a></p>
         <p><a href='countries.html'>Countries </a></p>
       </section>
 
+
       <figure id=logo>
         <img src="imgs/logo-scf.png" alt="Sahara Conservation Fund Logo" title="Sahara Conservation Fund Logo">
       </figure>
-
+    </div>
 
     </div>
 
