Make final edits

--- a/countries.html
+++ b/countries.html
@@ -89,7 +89,7 @@
 <section id="right-side">
 
     <figure class="country-img-container">
-      <img id="country-image" src="imgs/placeholder.jpg">
+      <img id="country-image" src="imgs/placeholder.jpg" alt="Country Image" title="Country Image">
     </figure>
 
 </section>
