--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 
-		<title>Sahara Conservation Fund</title>
+		<title>About - Sahara Conservation Fund</title>
 
     <link rel="stylesheet" href="https://use.typekit.net/lhn3kpw.css">
 
